<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedicationMonitor</string>
     <string name="reg_page">Register New Account</string>
      <string name="welcome_page">Home</string>
        <string name="med_page">Medications</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">TextView</string>
    <string name="signout">Signout</string>
<string name="age_picker">Select Age</string>
<!--    <string-array name="age_array">
  
        <item>0-10</item>
        <item>11-20</item>
        <item>21-30</item>
        <item>31-40</item>
        <item>41-50</item>
        <item>51-60</item>
        <item>61-70</item>
        <item>71-80</item>
        <item>81-90</item>
        <item>91-100</item>
      
    </string-array>-->
    <string name="male">Male</string>
    <string name="female">Female</string>
        <string name="email">Email</string>
        <string name="tab_home">HOME</string>
        <string name="tab_medications">MEDICATIONS</string>
        <string name="username">User Name</string>
        <color name="black">#ffffff</color>
        <color name="white">#000000</color>
        <string name="txtEmpty">View Medications Here</string>
       <string name="setselecteddate">Select date</string>
       <string name="ok">OK</string>
      
       
       
       
</resources>
